@@ -2,3 +2,11 @@ format: 'full_html'
 name : ''
 mail: ''
 linkonly: false
+textonly: false
+sitestyle: true
+simple_address: false
+engine: 'mimemail'
+preserve_class: false
+advanced:
+  incoming: false
+  key: ''
