@@ -2,13 +2,13 @@
 
 namespace Drupal\mimemail\Form;
 
+use Drupal\Component\Utility\Crypt;
 use Drupal\Core\Config\ConfigFactoryInterface;
 use Drupal\Core\Extension\ModuleHandlerInterface;
 use Drupal\Core\Extension\ThemeHandlerInterface;
 use Drupal\Core\Form\ConfigFormBase;
 use Drupal\Core\Form\FormStateInterface;
 use Drupal\Core\Mail\MailManagerInterface;
-use Drupal\mailsystem\MailsystemManager;
 use Symfony\Component\DependencyInjection\ContainerInterface;
 
 /**
@@ -17,16 +17,22 @@ use Symfony\Component\DependencyInjection\ContainerInterface;
 class AdminForm extends ConfigFormBase {
 
   /**
-   * @var MailsystemManager
+   * The mail plugin manager service.
+   *
+   * @var \Drupal\Core\Mail\MailManagerInterface
    */
   protected $mailManager;
 
   /**
+   * The module handler service.
+   *
    * @var \Drupal\Core\Extension\ModuleHandlerInterface
    */
   protected $moduleHandler;
 
   /**
+   * The theme handler service.
+   *
    * @var \Drupal\Core\Extension\ThemeHandlerInterface
    */
   protected $themeHandler;
@@ -36,6 +42,12 @@ class AdminForm extends ConfigFormBase {
    *
    * @param \Drupal\Core\Config\ConfigFactoryInterface $config_factory
    *   The factory for configuration objects.
+   * @param \Drupal\Core\Mail\MailManagerInterface $mail_manager
+   *   The mail plugin manager service.
+   * @param \Drupal\Core\Extension\ModuleHandlerInterface $module_handler
+   *   The module handler service.
+   * @param \Drupal\Core\Extension\ThemeHandlerInterface $theme_handler
+   *   The theme handler service.
    */
   public function __construct(ConfigFactoryInterface $config_factory, MailManagerInterface $mail_manager, ModuleHandlerInterface $module_handler, ThemeHandlerInterface $theme_handler) {
     parent::__construct($config_factory);
@@ -94,6 +106,54 @@ class AdminForm extends ConfigFormBase {
       '#description'   => $this->t('The email address that all site e-mails will be from when using default engine.'),
     ];
 
+    // Check for the existence of a mail.css file in the default theme folder.
+    $theme = $this->themeHandler->getDefault();
+    // @todo Searching the path is not what we want - this is how it was done
+    // in D7, but that's not how assets should be handled in D8.
+    $mailstyle = drupal_get_path('theme', $theme) . '/mail.css';
+    // Disable site style sheets including option if found.
+    if (is_file($mailstyle)) {
+      $config->set('sitestyle', FALSE);
+      $disable_sitestyle = TRUE;
+    }
+    else {
+      $disable_sitestyle = FALSE;
+    }
+
+    $form['mimemail']['simple_address'] = [
+      '#type'          => 'checkbox',
+      '#title'         => $this->t('Use simple address format'),
+      '#default_value' => $config->get('simple_address'),
+      '#description' => $this->t('Use the simple format of user@example.com for all recipient email addresses.'),
+    ];
+    $form['mimemail']['sitestyle'] = [
+      '#type'          => 'checkbox',
+      '#title'         => $this->t('Include site style sheets'),
+      '#default_value' => $config->get('sitestyle'),
+      '#description'   => $this->t('Gather all style sheets when no mail.css found in the default theme directory.'),
+      '#disabled'      => $disable_sitestyle,
+    ];
+    $form['mimemail']['textonly'] = [
+      '#type' => 'checkbox',
+      '#title' => $this->t('Send plain text email only'),
+      '#default_value' => $config->get('textonly'),
+      '#description' => $this->t('This option disables the use of email messages with graphics and styles. All messages will be converted to plain text.'),
+    ];
+    $form['mimemail']['linkonly'] = [
+      '#type'          => 'checkbox',
+      '#title'         => $this->t('Link images only'),
+      '#default_value' => $config->get('linkonly'),
+      '#description'   => $this->t('This option disables the embedding of images. All image will be available as external content. This can make email messages much smaller.'),
+    ];
+    if ($this->moduleHandler->moduleExists('mimemail_compress')) {
+      $form['mimemail']['preserve_class'] = [
+        '#type' => 'checkbox',
+        '#title' => $this->t('Preserve class attributes'),
+        '#default_value' => $config->get('preserve_class'),
+        '#description' => $this->t('This option disables the removing of class attributes from the message source. Useful for debugging the style of the message.'),
+      ];
+    }
+
     // Get a list of all formats.
     $formats = filter_formats();
     $format_options = [];
@@ -103,138 +163,75 @@ class AdminForm extends ConfigFormBase {
     $form['mimemail']['format'] = [
       '#type' => 'select',
       '#title' => $this->t('E-mail format'),
-      '#default_value' => $config->get('format'),
+      '#default_value' => $config->get('format') ? $config->get('format') : filter_fallback_format(),
       '#options' => $format_options,
       '#access' => count($formats) > 1,
       '#attributes' => ['class' => ['filter-list']],
-    ];
-    // Check for the existence of a mail.css file in the default theme folder.
-    /*$theme = variable_get('theme_default', NULL);
-    $mailstyle = drupal_get_path('theme', $theme) . '/mail.css';
-    // Disable site style sheets including option if found.
-    if (is_file($mailstyle)) {
-      variable_set('mimemail_sitestyle', 0);
-      $disable_sitestyle = TRUE;
-    }
-    else {
-      $disable_sitestyle = FALSE;
-    }
-
-    $form = [];
-    $form['mimemail']['mimemail_name'] = [
-      '#type'          => 'textfield',
-      '#title'         => t('Sender name'),
-      '#default_value' => variable_get('mimemail_name', variable_get('site_name', 'Drupal')),
-      '#size'          => 60,
-      '#maxlength'     => 128,
-      '#description'   => t('The name that all site emails will be from when using default engine.'),
-    ];
-    $form['mimemail']['mimemail_mail'] = [
-      '#type'          => 'textfield',
-      '#title'         => t('Sender e-mail address'),
-      '#default_value' => variable_get('mimemail_mail', variable_get('site_mail', ini_get('sendmail_from'))),
-      '#size'          => 60,
-      '#maxlength'     => 128,
-      '#description'   => t('The email address that all site e-mails will be from when using default engine.'),
-    ];
-    $form['mimemail']['mimemail_simple_address'] = [
-      '#type'          => 'checkbox',
-      '#title'         => t('Use simple address format'),
-      '#default_value' => variable_get('mimemail_simple_address', FALSE),
-      '#description' => t('Use the simple format of user@example.com for all recipient email addresses.'),
-    ];
-    $form['mimemail']['mimemail_sitestyle'] = [
-      '#type'          => 'checkbox',
-      '#title'         => t('Include site style sheets'),
-      '#default_value' => variable_get('mimemail_sitestyle', TRUE),
-      '#description'   => t('Gather all style sheets when no mail.css found in the default theme directory.'),
-      '#disabled'      => $disable_sitestyle,
-    ];
-    $form['mimemail']['mimemail_textonly'] = [
-      '#type' => 'checkbox',
-      '#title' => t('Send plain text email only'),
-      '#default_value' => variable_get('mimemail_textonly', FALSE),
-      '#description' => t('This option disables the use of email messages with graphics and styles. All messages will be converted to plain text.'),
-    ];
-    $form['mimemail']['mimemail_linkonly'] = [
-      '#type'          => 'checkbox',
-      '#title'         => t('Link images only'),
-      '#default_value' => variable_get('mimemail_linkonly', 0),
-      '#description'   => t('This option disables the embedding of images. All image will be available as external content. This can make email messages much smaller.'),
-    ];
-    if (module_exists('mimemail_compress')) {
-      $form['mimemail']['mimemail_preserve_class'] = [
-        '#type' => 'checkbox',
-        '#title' => t('Preserve class attributes'),
-        '#default_value' => variable_get('mimemail_preserve_class', 0),
-        '#description' => t('This option disables the removing of class attributes from the message source. Useful for debugging the style of the message.'),
-      ];
-    }
-
-    // Get a list of all formats.
-    $formats = filter_formats();
-    foreach ($formats as $format) {
-      $format_options[$format->format] = $format->name;
-    }
-    $form['mimemail']['mimemail_format'] = [
-      '#type' => 'select',
-      '#title' => t('E-mail format'),
-      '#options' => $format_options,
-      '#default_value' => variable_get('mimemail_format', filter_fallback_format()),
-      '#access' => count($formats) > 1,
-      '#attributes' => ['class' => ['filter-list']],
+      '#description' => $this->t('The filter set that will be applied to the message body. If you are using Mime Mail as default mail system, make sure to enable "Convert line breaks into HTML" and "Convert URLs into links" with a long enough maximum length for e.g. password reset URLs!'),
     ];
 
     $form['mimemail']['advanced'] = [
-      '#type' => 'fieldset',
-      '#title' => t('Advanced settings'),
-      '#collapsible' => TRUE,
-      '#collapsed' => TRUE,
+      '#type' => 'details',
+      '#title' => $this->t('Advanced settings'),
+      '#open' => TRUE,
     ];
-    $form['mimemail']['advanced']['mimemail_incoming'] = [
+    $form['mimemail']['advanced']['incoming'] = [
       '#type' => 'checkbox',
-      '#title' => t('Process incoming messages posted to this site'),
-      '#default_value' => variable_get('mimemail_incoming', FALSE),
-      '#description' => t('This is an advanced setting that should not be enabled unless you know what you are doing.'),
+      '#title' => $this->t('Process incoming messages posted to this site'),
+      '#default_value' => $config->get('advanced.incoming'),
+      '#description' => $this->t('This is an advanced setting that should not be enabled unless you know what you are doing.'),
     ];
-    $form['mimemail']['advanced']['mimemail_key'] = [
+    $form['mimemail']['advanced']['key'] = [
       '#type' => 'textfield',
-      '#title' => t('Message validation string'),
-      '#default_value' => variable_get('mimemail_key', drupal_random_key()),
+      '#title' => $this->t('Message validation string'),
+      '#default_value' => $config->get('advanced.key') ? $config->get('advanced.key') : Crypt::randomBytesBase64(),
       '#required' => TRUE,
-      '#description' => t('This string will be used to validate incoming messages. It can be anything, but must be used on both sides of the transfer.'),
+      '#description' => $this->t('This string will be used to validate incoming messages. It can be anything, but must be used on both sides of the transfer.'),
     ];
 
     // Get the available mail engines.
-    $engines = mimemail_get_engines();
+    // @todo Hard-code the 'mimemail' engine until mimemail_get_engines() has
+    // been ported to D8. The structure of the $engines array is defined in
+    // mimemail_get_engines().
+    $engines['mimemail'] = [
+      'name' => $this->t('Mime Mail'),
+      'description' => $this->t('Default mailing engine.'),
+    ];
+    // @todo Port the mimemail_get_engines() function to D8.
+    /* $engines = mimemail_get_engines(); */
     foreach ($engines as $module => $engine) {
       $engine_options[$module] = $engine['name'] . ': ' . $engine['description'];
     }
+
     // Hide the settings if only 1 engine is available.
     if (count($engines) == 1) {
       reset($engines);
-      variable_set('mimemail_engine', key($engines));
-      $form['mimemail']['mimemail_engine'] = [
+      $config->set('engine', key($engines));
+      $form['mimemail']['engine'] = [
         '#type' => 'hidden',
-        '#value' => variable_get('mimemail_engine', 'mimemail'),
+        '#value' => $config->get('engine'),
       ];
     }
     else {
-      $form['mimemail']['mimemail_engine'] = [
+      $form['mimemail']['engine'] = [
         '#type' => 'select',
-        '#title' => t('E-mail engine'),
-        '#default_value' => variable_get('mimemail_engine', 'mimemail'),
+        '#title' => $this->t('E-mail engine'),
+        '#default_value' => $config->get('engine'),
         '#options' => $engine_options,
-        '#description' => t('Choose an engine for sending mails from your site.'),
+        '#description' => $this->t('Choose an engine for sending mails from your site.'),
       ];
     }
 
-    if (variable_get('mimemail_engine', 'mail')) {
-      $settings = module_invoke(variable_get('mimemail_engine', 'mimemail'), 'mailengine', 'settings');
+    // @todo This block is wrong for both D7 and D8 - 'engine' won't have the
+    // value selected above unless we use Ajax here. If we don't use Ajax and
+    // there is more than 1 engine available, then we're operating on the value
+    // that 'engine' had at page load instead of the one selected above.
+    if ($config->get('engine')) {
+      $settings = $this->moduleHandler->invoke($config->get('engine'), 'mailengine', ['settings']);
       if ($settings) {
         $form['mimemail']['engine_settings'] = [
           '#type' => 'fieldset',
-          '#title' => t('Engine specific settings'),
+          '#title' => $this->t('Engine specific settings'),
         ];
         foreach ($settings as $name => $value) {
           $form['mimemail']['engine_settings'][$name] = $value;
@@ -243,15 +240,9 @@ class AdminForm extends ConfigFormBase {
     }
     else {
       $this->messenger()->addError($this->t('Please choose a mail engine.'));
-    }*/
+    }
 
     return parent::buildForm($form, $form_state);
-  }
-
-  /**
-   * {@inheritdoc}
-   */
-  public function validateForm(array &$form, FormStateInterface $form_state) {
   }
 
   /**
@@ -262,9 +253,17 @@ class AdminForm extends ConfigFormBase {
     $config
       ->set('format', $form_state->getValue('format'))
       ->set('name', $form_state->getValue('name'))
-      ->set('mail', $form_state->getValue('mail'));
-    if ($form_state->hasValue('linkonly')) {
-      $config->set('linkonly', $form_state->getValue('linkonly'));
+      ->set('mail', $form_state->getValue('mail'))
+      ->set('linkonly', $form_state->getValue('linkonly'))
+      ->set('textonly', $form_state->getValue('textonly'))
+      ->set('sitestyle', $form_state->getValue('sitestyle'))
+      ->set('simple_address', $form_state->getValue('simple_address'))
+      ->set('engine', $form_state->getValue('engine'))
+      ->set('advanced.incoming', $form_state->getValue('incoming'))
+      ->set('advanced.key', $form_state->getValue('key'));
+    if ($form_state->hasValue('preserve_class')) {
+      // This form element is only present when mimemail_compress is enabled.
+      $config->set('preserve_class', $form_state->getValue('preserve_class'));
     }
     $config->save();
 
