@@ -1,5 +1,6 @@
 Mime Mail 8.x-1.x, xxxx-xx-xx
 -----------------------
+- #2986723 by TR: Many settings not ported to D8 yet
 - #2938963 by hansfn, TR, colan: Sender'Mime Mail mailer fails without explanation
 - #2985911 by TR: Port test cases to D8
 - #2983816 by TR, Xano: Add basic config schemas / fix AdminForm
